--- a/content/themes/azami2/sass/components/global/_footer.scss
+++ b/content/themes/azami2/sass/components/global/_footer.scss
@@ -2,7 +2,7 @@ footer{
 	width: 100%;
 	height: auto;
 	overflow: hidden;
-	z-index: 9999;
+	z-index: 998;
 	
 	background: $black;
 	
