--- a/content/themes/azami2/sass/components/navigation/_menu.scss
+++ b/content/themes/azami2/sass/components/navigation/_menu.scss
@@ -9,7 +9,7 @@
 	padding-left: 8.33335%;
 	padding-right: 8.33335%;
 	
-	z-index: 1001;
+	z-index: 999;
 	background: $black;
 	
 	li{
